// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusExplanationDialog > for a blocked user > matches the snapshot 1`] = `
<div
  aria-describedby="radix-_r_id_"
  aria-labelledby="radix-_r_id_"
  class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
  data-slot="alert-dialog-content"
  data-state="open"
  id="radix-_r_id_"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-col gap-2 text-center sm:text-left"
    data-slot="alert-dialog-header"
  >
    <h2
      class="text-lg font-semibold flex items-center space-x-2"
      data-slot="alert-dialog-title"
      id="radix-_r_id_"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user-x h-5 w-5 text-red-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
        <line
          x1="17"
          x2="22"
          y1="8"
          y2="13"
        />
        <line
          x1="22"
          x2="17"
          y1="8"
          y2="13"
        />
      </svg>
      <span>
        Blocked User Status
      </span>
    </h2>
    <p
      class="text-muted-foreground text-sm space-y-3 pt-2"
      data-slot="alert-dialog-description"
      id="radix-_r_id_"
    >
      <p>
        <strong>
          Blocked users
        </strong>
         are "shadow banned" - they can continue to participate in giveaways but will never be eligible for winning prizes unless explicitly selected by an administrator.
      </p>
      <p>
        This approach prevents users from discovering they've been blocked and creating new accounts to circumvent the restriction. From their perspective, they can still enter giveaways normally.
      </p>
      <p
        class="text-amber-600 font-medium"
      >
        Blocked users can only win if manually selected by giveaway administrators.
      </p>
    </p>
  </div>
  <div
    class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end"
    data-slot="alert-dialog-footer"
  >
    <button
      class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
      type="button"
    >
      Got it
    </button>
  </div>
</div>
`;

exports[`StatusExplanationDialog > for an active user > matches the snapshot 1`] = `
<div
  aria-describedby="radix-_r_id_"
  aria-labelledby="radix-_r_id_"
  class="bg-background data-[state=open]:animate-in data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:fade-in-0 data-[state=closed]:zoom-out-95 data-[state=open]:zoom-in-95 fixed top-[50%] left-[50%] z-50 grid w-full max-w-[calc(100%-2rem)] translate-x-[-50%] translate-y-[-50%] gap-4 rounded-lg border p-6 shadow-lg duration-200 sm:max-w-lg"
  data-slot="alert-dialog-content"
  data-state="open"
  id="radix-_r_id_"
  role="alertdialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <div
    class="flex flex-col gap-2 text-center sm:text-left"
    data-slot="alert-dialog-header"
  >
    <h2
      class="text-lg font-semibold flex items-center space-x-2"
      data-slot="alert-dialog-title"
      id="radix-_r_id_"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-check-big h-5 w-5 text-green-600"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.801 10A10 10 0 1 1 17 3.335"
        />
        <path
          d="m9 11 3 3L22 4"
        />
      </svg>
      <span>
        Active User Status
      </span>
    </h2>
    <p
      class="text-muted-foreground text-sm space-y-3 pt-2"
      data-slot="alert-dialog-description"
      id="radix-_r_id_"
    >
      <p>
        <strong>
          Active users
        </strong>
         are allowed to participate in any giveaway and are eligible to win prizes.
      </p>
      <p>
        They have full access to all giveaway features and can be automatically selected as winners during prize drawings.
      </p>
    </p>
  </div>
  <div
    class="flex flex-col-reverse gap-2 sm:flex-row sm:justify-end"
    data-slot="alert-dialog-footer"
  >
    <button
      class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3"
      type="button"
    >
      Got it
    </button>
  </div>
</div>
`;
